`/Producer` 破損チェックを追加

--- a/src/itextsharp.test/itextsharp.test.csproj
+++ b/src/itextsharp.test/itextsharp.test.csproj
@@ -8,11 +8,22 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="itextsharp.test\**" />
+    <None Remove="itextsharp.test\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="NUnit" Version="3.13.2" />
     <PackageReference Include="NUnit3TestAdapter" Version="4.0.0" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\core\itextsharp.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="Files\**">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 </Project>
