--- a/src/core/itextsharp.csproj
+++ b/src/core/itextsharp.csproj
@@ -8,7 +8,7 @@
     <AssemblyName>HiraokaHyperTools.itextsharp</AssemblyName>
 
     <PackageId>HiraokaHyperTools.iTextSharp-LGPL</PackageId>
-    <Version>0.1.16</Version>
+    <Version>0.1.19</Version>
     <Authors>kenjiuno</Authors>
     <Description>A free PDF library ported from Java iText.</Description>
     <PackageLicenseExpression>LGPL-2.1-or-later</PackageLicenseExpression>
@@ -16,7 +16,7 @@
     <RepositoryUrl>https://github.com/HiraokaHyperTools/iTextSharp-LGPL.git</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
-    <Copyright>Copyright (C) 1999-2009 by Bruno Lowagie and Paulo Soares, 2021 HIRAOKA HYPERS TOOLS, Inc.. All Rights Reserved.</Copyright>
+    <Copyright>Copyright (C) 1999-2009 by Bruno Lowagie and Paulo Soares, 2021-2022 HIRAOKA HYPERS TOOLS, Inc.. All Rights Reserved.</Copyright>
     <PackageTags>iTextSharp-LGPL</PackageTags>
 
     <SignAssembly>true</SignAssembly>
